# rust-demos

./: .cursorignore  Cargo.toml  Vercel.session.sql  log.2024-05-22-00  log.2024-05-22-01
algorithm/src/: list.rs
apple/: Cargo.toml
async_program/: Cargo.toml
async_program/src/: lib.rs  pin.rs
blockchain/blockchain-rust/: Cargo.toml
blockchain/blockchain-rust/blockchain_db/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1724590957808732  LOG.old.1724591003704040  MANIFEST-000015
blockchain/blockchain-rust/src/: lib.rs
blockchain/blockchain-rust/src/blocks/: block.rs  blockchain.rs  blockchain_persistence.rs  mod.rs
blockchain/blockchain-rust/src/storage/: mod.rs  rockdb.rs
blockchain/blockchain-rust/test_db/: IDENTITY  LOG
blockchain/ckb-example/: Cargo.toml
blockchain/ckb-example/examples/: cell_usage.rs  rust_sdk_usage.rs
blockchain/ckb-example/src/: main.rs
blockchain/web3-rpc/: Cargo.toml
blockchain/web3-rpc/examples/: deploy_from_contract.rs  jsonrpsee.rs  rust-web3.rs  test_uint.rs
blockchain/web3-rpc/src/: lib.rs  main.rs
cmd/: Cargo.toml
cmd/data/: key.txt
cmd/src/: lib.rs  main.rs  password_generate.rs  utils.rs
cmd/src/cli/: jwt.rs  mod.rs  passgen.rs  text.rs
cmd/src/process/: jwt.rs  mod.rs  passgen.rs  text.rs
concurrency_async/: Cargo.toml
concurrency_async/examples/: sleep_future.rs  wake_future.rs
concurrency_async/src/: lib.rs  matrix.rs  pin.rs
data/: persist-user.json  test.txt
games/breakout/: Cargo.toml
games/snake/: Cargo.toml  README.md
games/snake/examples/: learn1.rs  learn2.rs  learn3.rs
games/snake/src/: food.rs  lifetime.rs  main.rs  snake.rs  ui.rs
mini_redis/: Cargo.toml
mini_redis/examples/: client.rs  server.rs
playground/: Cargo.toml
playground/benches/: benchmark.rs
playground/examples/: base32.rs  chatgpt.rs  crossbean.rs  diffie_hellman.rs  discord_bot.rs  email.rs  graceful_shutdown.rs  ractor.rs  redis_mq.rs  regx.rs  select.rs
playground/src/: main.rs
project/lc/: Cargo.toml  README.md
project/lc/src/: main.rs  process.rs  util.rs
project/pow/: Cargo.toml  abi.proto
project/pow/src/: server.rs
project/pow/src/pb/: abi.rs  mod.rs
project/repl/: Cargo.toml
project/repl/examples/: no_context.rs
project/repl/src/: lib.rs  main.rs
project/repl/src/cli/: exit.rs  hello.rs  ls.rs  mod.rs
project/totp/: Cargo.toml
project/totp/examples/: totp_rs.rs
project/totp/src/: main.rs
project/v8/: Cargo.toml
project/v8/examples/: basic.rs  runtime.rs
project/v8/src/: lib.rs  state.rs
server/: Cargo.toml
server/src/: lib.rs
src/: basic.rs  main.rs  persist.rs  smart_pointer.rs  thread.rs  train_code.rs
wasm/wasm-pack-learn/: Cargo.toml  LICENSE_MIT  README.md
wasm/wasm-pack-learn/src/: lib.rs  web.rs
wasm/wasm-pack-learn/tests/: web.rs
web/first/: Cargo.toml  request.http
web/first/asset/: test.txt
web/first/src/: main.rs
web/url_shortenr/: Cargo.toml  request.http
web/url_shortenr/migrations/: 20240624074834_initial.sql
web/url_shortenr/src/: error.rs  lib.rs  main.rs
web/url_shortenr/src/handlers/: mod.rs  url.rs
web/url_shortenr/src/models/: mod.rs  urls.rs
