workspace = { members = [ "algorithm", "apple", "async_program", "cmd","server", "web"] }
[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
rand = "0.8.5"
reqwest = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
server = { version = "0.1.0", path = "server" }
tokio = { version = "1", features = ["sync"]}
