[workspace]
members = [
    "algorithm",
    "concurrency_async",
    "cmd",
    "mini_redis",
    "project/lc",
    "games/snake",
    "project/v8",
    "server",
    "games/breakout",
    "web/first",
    "web/url_shortenr",
    "blockchain/web3-rpc",
    "wasm/wasm-pack-learn",
    "playground",
    "project/repl",
    "blockchain/blockchain-rust", "blockchain/ckb-example",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
mini-redis = "0.4.1"
num = "0.4.1"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
server = { version = "0.1.0", path = "server" }
tokio = { version = "1.41.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = '0.1.40'
tracing-subscriber = "0.3.18"
