[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
anyhow = "1.0.82"
zxcvbn = '2.2.2'
blake3 = "1.5.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
base64 = "0.22.0"
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }
enum_dispatch = "0.3.13"
ring = "0.17.8"
jsonwebtoken = "9.3.0"
serde = "1.0.197"