[package]
name = "mini_redis_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
env_logger = "0.11.3"
log = "0.4.21"
mini-redis = "0.4.1"
tokio = { version = "1.37.0", features = ["full"]}
tracing = "0.1.40"


[[example]]
name = "server"
path = "examples/server.rs"
