[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
alloy = { version = "0.2.0", features = ["full"] }
anyhow = { workspace = true }
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
hkdf = "0.12.4"
mini-redis = "0.4.1"
num = "0.4.1"
oneshot = { version = "0.1.8", features = ["async"] }
rand = "0.8.5"
rand_core = "0.5.1"
regex = "1.10.5"
reqwest = { workspace = true }
ristretto255-dh = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
server = { version = "0.1.0", path = "../server" }
sha2 = "0.10.8"
tokio = { version = "1", features = ["sync"] }
tracing = '0.1.40'
tracing-subscriber = "0.3.18"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

# add benches
[[bench]]
name = "benchmark"
harness = false
