[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
alloy = { version = "0.2.0", features = ["full"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-openai = "0.25.0"
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
dashmap = "6.1.0"
dotenv = "0.15.0"
futures = "0.3.31"
hkdf = "0.12.4"
lettre = "0.11.10"
mini-redis = "0.4.1"
num = "0.4.1"
oneshot = { version = "0.1.8", features = ["async"] }
ractor = { version = "0.13.0", features = ["async-trait"] }
rand = "0.8.5"
rand_core = "0.5.1"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
regex = "1.10.5"
reqwest = { workspace = true }
ristretto255-dh = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.12.2"
server = { version = "0.1.0", path = "../server" }
sha2 = "0.10.8"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tracing = '0.1.40'
tracing-subscriber = "0.3.18"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

# add benches
[[bench]]
name = "benchmark"
harness = false
