[package]
name = "lc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
hyperpolyglot = "0.1.7"
tabled = { version = "0.15.0", features = ["ansi"] }
owo-colors = "4"
tokio = { version = '1.37.0', features = ["full"]}
infer = "0.15.0"