[package]
name = "pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
prost = "0.12.4"
tonic = "0.11.0"
tokio = { version = "1", features = ["sync"]}

[build-dependencies]
tonic-build = "0.11.0"
