[package]
name = "repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
reedline-repl-rs = { version = "1.1.1", features = ["derive"] }
clap = { version = "4.5.10", features = ["derive"] }
