[package]
name = "url_shortenr"
description = "a url-shorten service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dotenv = "0.15.0"
nanoid = "0.4.0"
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" , "postgres"] }
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
